# makeobj

./: .gitignore  README.md  pyproject.toml  setup.py
makeobj/: __init__.py  base.py  even_flow.py  helper.py  obj.py  obj_fix.py  text_parse.py  text_parse_base.py  tools.py
tests/: f1.makeobj  run.py
tests/files/: f1.makeobj  f2.makeobj  f3.makeobj
tests/makeobjtests/: test_obj.py  test_parse.py  test_tools.py
